[gd_scene load_steps=8 format=3 uid="uid://b2n0s8gh53k8p"]

[ext_resource type="Theme" uid="uid://2tytydfeg3gl" path="res://main_theme.tres" id="1_ruvld"]
[ext_resource type="Script" path="res://scenes/ui/card_visuals.gd" id="2_6iwdn"]
[ext_resource type="StyleBox" uid="uid://bijoefntbq3be" path="res://scenes/card_ui/base_stylebox.tres" id="2_36wg4"]
[ext_resource type="Texture2D" uid="uid://vdp7cms7ljgj" path="res://art/energy.png" id="3_jyadm"]
[ext_resource type="Resource" uid="uid://5nh4yv103t33" path="res://cards/red/strike_red.tres" id="3_w2ddi"]
[ext_resource type="Texture2D" uid="uid://c6rme2o6dyaoj" path="res://art/tile_0104.png" id="4_h5gsn"]
[ext_resource type="FontFile" uid="uid://7cxf84hdbfj5" path="res://art/fusion-pixel-12px-proportional-zh_hans.ttf" id="7_1mbkw"]

[node name="CardVisuals" type="Control"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_ruvld")
script = ExtResource("2_6iwdn")
card = ExtResource("3_w2ddi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_36wg4")

[node name="Banner" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 8.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0, 0.482353, 0.643137, 1)

[node name="CardName" type="Label" parent="Banner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 4
text = "Knife"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -2.0
offset_top = -2.0
offset_right = 6.0
offset_bottom = 6.0
mouse_filter = 2
texture = ExtResource("3_jyadm")
expand_mode = 1
stretch_mode = 5

[node name="Cost" type="Label" parent="CostIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.042)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_top = 9.0
offset_right = 5.0
offset_bottom = 19.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("4_h5gsn")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -22.0
offset_right = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("1_ruvld")
theme_override_constants/line_separation = -2
theme_override_fonts/normal_font = ExtResource("7_1mbkw")
theme_override_font_sizes/mono_font_size = 4
theme_override_font_sizes/normal_font_size = 4
bbcode_enabled = true
text = "description"
scroll_active = false
